feat: apply v2.1.5 updates